# qtpaypal

./: .gitignore  CMakeLists.txt  EnhancedDataTypes.xsd  PayPalSvc.wsdl  README.md
src/: CMakeLists.txt
src/client/: CMakeLists.txt  CPackLists.txt  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  main.cpp
src/paypal/: CMakeLists.txt  CPackLists.txt  qclient.cpp  qclient.hpp  qclient_p.hpp  qclientbase.cpp  qclientbase.hpp  qclientbase_p.hpp  qpaypalconfig.hpp.in  qpaypalglobal.hpp  qsoapclient.cpp  qsoapclient.hpp  qsoapclient_p.hpp
src/server/: CMakeLists.txt  CPackLists.txt  PayPalAPIServerObject.cpp  PayPalAPIServerObject.hpp  main.cpp
src/service/: eBLBaseComponents.xsd
